name:                aoc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/acarapetis/advent-of-code-2020
license:             BSD3
license-file:        LICENSE
author:              Anthony Carapetis
maintainer:          anthony.carapetis@gmail.com
copyright:           2020 Anthony Carapetis
category:            Fun
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

executable day1
  hs-source-dirs:      src
  main-is:             day1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers, array, split >= 0.2, parsec, mtl

library
  exposed-modules: AOC, Grid, Asm
