name:                aoc
version:             0.1.0.0
homepage:            https://github.com/acarapetis/advent-of-code-2020
author:              Anthony Carapetis
maintainer:          anthony.carapetis@gmail.com
copyright:           2020 Anthony Carapetis
category:            Fun
build-type:          Simple
cabal-version:       >=1.10

executable day11
  hs-source-dirs:      .
  main-is:             day11.hs
  default-language:    Haskell2010
  other-modules:       AOC, Grid, Asm
  build-depends:       internal, base >= 4.7 && < 5, containers, array, split >= 0.2, parsec, mtl

executable day12
  hs-source-dirs:      .
  main-is:             day12.hs
  default-language:    Haskell2010
  other-modules:       AOC, Grid, Asm
  build-depends:       internal, base >= 4.7 && < 5, containers, array, split >= 0.2, parsec, mtl

executable day13
  hs-source-dirs:      .
  main-is:             day13.hs
  default-language:    Haskell2010
  other-modules:       AOC, Grid, Asm
  build-depends:       internal, base >= 4.7 && < 5, containers, array, split >= 0.2, parsec, mtl

executable day14
  hs-source-dirs:      .
  main-is:             day14.hs
  default-language:    Haskell2010
  other-modules:       AOC, Grid, Asm
  build-depends:       internal, base >= 4.7 && < 5, containers, array, split >= 0.2, parsec, mtl

executable day15
  hs-source-dirs:      .
  main-is:             day15.hs
  default-language:    Haskell2010
  other-modules:       AOC, Grid, Asm
  build-depends:       internal, base >= 4.7 && < 5, containers, array, split >= 0.2, parsec, mtl

executable day19
  hs-source-dirs:      .
  main-is:             day19.hs
  default-language:    Haskell2010
  other-modules:       AOC, Grid, Asm
  build-depends:       internal, base >= 4.7 && < 5, containers, array, split >= 0.2, parsec, mtl

executable day20
  hs-source-dirs:      .
  main-is:             day20.hs
  default-language:    Haskell2010
  other-modules:       AOC, Grid, Asm
  build-depends:       internal, base >= 4.7 && < 5, containers, array, split >= 0.2, parsec, mtl

library internal
  hs-source-dirs:      .
  default-language:    Haskell2010
  exposed-modules:     AOC, Grid, Asm
  build-depends:       base >= 4.7 && < 5, containers, array, split >= 0.2, parsec, mtl

library
  exposed-modules:     AOC, Grid, Asm
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers, array, split >= 0.2, parsec, mtl
